# Trabajo-TFG

./: pyproject.toml
tests/: test_codigo.py
