[tool.poetry]
name = "codigo"
version = "0.1.0"
description = ""
authors = ["DanielRC98 <p62rocad@uco.es>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.1"
dash = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
